--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "portrait.png"
-  name             : "Leona YAO LIU"
+  name             : "Leona 刘垚"
   pronouns         : # example: "she/her"  
   bio              : "𓏸 𓂂 𓈒 𓆡𓆝 𓆟𓆞𓆜𓏸 𓂂 𓈒"
   location         : "Earth"
-  employer         : "The University of Hong Kong"
+  employer         : "香港大学"
   uri              : # URL
   email            : "yaoyaoliu2001@gmail.com" 
 
